src/styles/tailwind.css
@import "tailwindcss";
@import "@somedevsdo/tailwind";
@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));

@theme inline {
  --color-link: var(--link);
}

@layer base {
  :root {
    --link: var(--seance);
  }

  [data-theme="dark"] {
    --link: var(--perfume);
  }

  * {
    box-sizing: border-box;
  }

  body {
    background-color: var(--primary-background);
    color: var(--foreground);
    font-family: var(--font-family-text);
    -webkit-font-smoothing: antialiased;
    margin: 0;
    padding: 0;
    transition: background 0.2s ease-out;
  }

  a {
    color: inherit;
  }

  img {
    max-width: 100%;
  }

  .astro-code {
    padding: 0.75rem;
  }
}

@layer utilities {
  .font-header {
    font-family: var(--font-family-header);
  }
}

